<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="15sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:inputType="textPersonName"
        android:autofillHints="@string/enter_name"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/email_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/enter_email"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_picture"
        android:textSize="15sp"/>
    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:contentDescription="@string/image_description"/>

</LinearLayout>