<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_below="@+id/text_view"/>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text_view"
        android:layout_toRightOf="@+id/button"
        android:text="@string/checkbox" />
    <ImageButton
        android:id="@+id/flag"
        android:src="@drawable/flag"
        android:layout_width="wrap_content"
        android:contentDescription="@string/image_description"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"/>
    <Switch
        android:id="@+id/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/flag"
        android:layout_below="@+id/button"
        android:text="Switch on/off" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Type here"
        android:layout_below="@+id/flag"/>
</RelativeLayout>