<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ChatRoomActivity">
    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/type_message"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:text="@string/type_message"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/receive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_button"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>